# access-profiling

./: COPYRIGHT.txt  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
conda/: meta.yaml
src/access/profiling/: __init__.py  access_configs.py  access_models.py  cice5_parser.py  config_profiling.py  cylc_manager.py  cylc_parser.py  esmf_parser.py  experiment.py  fms_parser.py  fms_profiling.py  manager.py  metrics.py  parser.py  payu_config.py  payu_manager.py  payujson_parser.py  plotting_utils.py  scaling.py  um_parser.py
tests/: test_access_configs.py  test_access_models.py  test_cice5_profiling.py  test_config_profiling.py  test_cylc_dbreader.py  test_cylc_manager.py  test_cylc_parser.py  test_esmf_summary_parser.py  test_experiment.py  test_fms_parser.py  test_fms_profiling.py  test_manager.py  test_metrics.py  test_parser.py  test_payu_config.py  test_payu_manager.py  test_payujson_parser.py  test_plotting_utils.py  test_profiling.py  test_scaling.py  test_um_parser.py
