[project]
name = "access-profiling"
dynamic = ["version"]
description = "Tools and utilities to profile the ACCESS climate models."
authors = [
  {name = "Micael Oliveira", email="micael.oliveira@anu.edu.au"},
  {name = "Manodeep Sinha", email="manodeep.sinha@anu.edu.au"},
  {name = "Edward Yang", email="edward.yang@anu.edu.au"},  
]
readme = "README.md"
keywords = ["profiling", "access"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "xarray",
]

[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
devel = [
    "ruff",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = ["--cov=access.profiling", "--cov-report=term", "--cov-report=html", "--cov-report=xml"]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["setup.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "SIM", "PTH", "UP", "I", "N", "C901"]
